????, 2004 - 0.8:
Updated PMD version to 1.6.
Updated to work with JDeveloper 9.0.4.

Nov 17 2003 - 0.7:
Fixed bug 765847 - PMD plugin now works on BC4J project.  Thanks to Hariolf Häfele for the report.

Nov 04 2003 - 0.6:
Added rule name to LogWindow; thx to Roman Legat for the suggestion.
Updated PMD version to 1.3.
Changed license to BSD-style.

August 27 2003 - 0.5:
Updated to pmd-1.2.1.
Implemented various window/tab features; thx to Ronald Kinion for the suggestions.
Added browse buttons to settings panel.

June 20, 2003 - 0.4:
Upgraded to pmd-1.1.

April 3, 2003 - 0.3:
Implemented the "centralized rule selection storage" feature as suggested by Ronald Kinion.

April 1, 2003 - 0.2:
Updated to work with pmd-1.04.
Implemented several of Ronald Kinion's suggestions.

February 25, 2003 - 0.1:
Initial release