@@ -1,13 +1,0 @@
-Manifest-Version: 1.0
-Created-By: Apache Ant 1.5.1
-AddinCount: 1
-Addin0: net.sourceforge.pmd.jdeveloper.Plugin
-
-Name: net/sourceforge/pmd/jdeveloper/
-Specification-Title: PMD Static Code Analyzer
-Specification-Version: 0.7
-Specification-Vendor: Tom Copeland
-Implementation-Title: net.sourceforge.pmd.jdeveloper
-Implementation-Version: 0.7
-Implementation-Vendor: Tom Copeland
-Implementation-URL: http://pmd.sf.net/
